--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,8 +1,9 @@
 {
     "routes": [
-    {
-    "route": "/index.html",
-    "rewrite": "/"
-    }
+        {
+            "route": "/u3a-software.html",
+            "redirect": "/",
+            "statusCode": 301
+        }
     ]
 }
